grammar/testsuite/lab1-testsuite-larger/lab1-test-dir/ParCPP.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.4 from ParCPP.y
-----------------------------------------------------------------------------

state 4 contains 1 reduce/reduce conflicts.
state 14 contains 1 reduce/reduce conflicts.
state 34 contains 1 reduce/reduce conflicts.
state 36 contains 1 reduce/reduce conflicts.
state 37 contains 1 reduce/reduce conflicts.
state 55 contains 1 shift/reduce conflicts.
state 62 contains 1 shift/reduce conflicts.
state 68 contains 1 shift/reduce conflicts.
state 70 contains 2 reduce/reduce conflicts.
state 77 contains 3 shift/reduce conflicts.
state 80 contains 1 shift/reduce conflicts.
state 89 contains 2 reduce/reduce conflicts.
state 95 contains 1 shift/reduce conflicts and 45 reduce/reduce conflicts.
state 122 contains 2 reduce/reduce conflicts.
state 124 contains 1 shift/reduce conflicts.
state 126 contains 1 shift/reduce conflicts and 8 reduce/reduce conflicts.
state 140 contains 2 reduce/reduce conflicts.
state 148 contains 1 shift/reduce conflicts.
state 152 contains 1 shift/reduce conflicts.
state 155 contains 2 reduce/reduce conflicts.
state 157 contains 1 reduce/reduce conflicts.
state 177 contains 2 reduce/reduce conflicts.
state 178 contains 1 shift/reduce conflicts.
state 198 contains 1 shift/reduce conflicts.
state 199 contains 1 shift/reduce conflicts.
state 201 contains 2 reduce/reduce conflicts.
state 202 contains 1 reduce/reduce conflicts.
state 228 contains 1 shift/reduce conflicts.
state 231 contains 1 reduce/reduce conflicts.
state 233 contains 2 reduce/reduce conflicts.
state 239 contains 2 reduce/reduce conflicts.
state 244 contains 1 shift/reduce conflicts.
state 245 contains 1 shift/reduce conflicts.
state 248 contains 46 reduce/reduce conflicts.
state 265 contains 1 shift/reduce conflicts.
state 266 contains 1 shift/reduce conflicts.
state 278 contains 1 reduce/reduce conflicts.
state 316 contains 1 shift/reduce conflicts.

rule 60 is unused
rule 61 is unused
rule 93 is unused
rule 97 is unused
rule 98 is unused
rule 108 is unused
rule 159 is unused
rule 160 is unused
rule 166 is unused
rule 167 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDefinition -> Definition                   (1)
	%start_pListDefinition -> ListDefinition           (2)
	%start_pArgumentList -> ArgumentList               (3)
	%start_pListArgument -> ListArgument               (4)
	%start_pArgument -> Argument                       (5)
	%start_pBody -> Body                               (6)
	%start_pStm -> Stm                                 (7)
	%start_pListStm -> ListStm                         (8)
	%start_pStruct -> Struct                           (9)
	%start_pTypeDef -> TypeDef                         (10)
	%start_pDecl -> Decl                               (11)
	%start_pVar -> Var                                 (12)
	%start_pListVar -> ListVar                         (13)
	%start_pListDecl -> ListDecl                       (14)
	%start_pQCon -> QCon                               (15)
	%start_pName -> Name                               (16)
	%start_pExp16 -> Exp16                             (17)
	%start_pExp15 -> Exp15                             (18)
	%start_pExp14 -> Exp14                             (19)
	%start_pExp13 -> Exp13                             (20)
	%start_pExp12 -> Exp12                             (21)
	%start_pExp11 -> Exp11                             (22)
	%start_pExp10 -> Exp10                             (23)
	%start_pExp9 -> Exp9                               (24)
	%start_pExp8 -> Exp8                               (25)
	%start_pExp4 -> Exp4                               (26)
	%start_pExp3 -> Exp3                               (27)
	%start_pExp2 -> Exp2                               (28)
	%start_pExp1 -> Exp1                               (29)
	%start_pExp -> Exp                                 (30)
	%start_pExp5 -> Exp5                               (31)
	%start_pExp6 -> Exp6                               (32)
	%start_pExp7 -> Exp7                               (33)
	%start_pListExp -> ListExp                         (34)
	%start_pTempInst -> TempInst                       (35)
	%start_pTypeList -> TypeList                       (36)
	%start_pListType -> ListType                       (37)
	%start_pType -> Type                               (38)
	%start_pBType -> BType                             (39)
	%start_pLiteral -> Literal                         (40)
	%start_pStringList -> StringList                   (41)
	%start_pId -> Id                                   (42)
	Integer -> L_integ                                 (43)
	Double -> L_doubl                                  (44)
	Char -> L_charac                                   (45)
	String -> L_quoted                                 (46)
	Ident -> L_ident                                   (47)
	Program -> ListDefinition                          (48)
	Definition -> 'inline' Type Id ArgumentList Body   (49)
	Definition -> Type Id ArgumentList Body            (50)
	Definition -> Type Id ArgumentList ';'             (51)
	Definition -> Decl ';'                             (52)
	Definition -> Struct                               (53)
	Definition -> TypeDef                              (54)
	Definition -> 'using' 'namespace' Id ';'           (55)
	Definition -> 'using' QCon ';'                     (56)
	ListDefinition ->                                  (57)
	ListDefinition -> ListDefinition Definition        (58)
	ArgumentList -> '(' ListArgument ')'               (59)
	ListArgument ->                                    (60)
	ListArgument -> Argument                           (61)
	ListArgument -> Argument ',' ListArgument          (62)
	ListArgument ->                                    (63)
	ListArgument -> Argument ListArgument              (64)
	Argument -> 'const' Type Exp                       (65)
	Argument -> Type Exp                               (66)
	Argument -> 'const' Type                           (67)
	Argument -> Type                                   (68)
	Body -> '{' ListStm '}'                            (69)
	Body -> '{' ';' '}'                                (70)
	Stm -> Decl ';'                                    (71)
	Stm -> 'return' Exp ';'                            (72)
	Stm -> 'exit' '(' Exp ')' ';'                      (73)
	Stm -> 'while' '(' Exp ')' Stm                     (74)
	Stm -> 'do' Stm 'while' '(' Exp ')' ';'            (75)
	Stm -> 'for' '(' Decl ';' Exp ';' Exp ')' Stm      (76)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (77)
	Stm -> 'if' '(' Exp ')' Stm                        (78)
	Stm -> '{' ListStm '}'                             (79)
	Stm -> '{' '}'                                     (80)
	Stm -> TypeDef                                     (81)
	Stm -> Struct                                      (82)
	Stm -> Exp ';'                                     (83)
	ListStm ->                                         (84)
	ListStm -> ListStm Stm                             (85)
	Struct -> 'struct' Id '{' ListDecl '}'             (86)
	TypeDef -> 'typedef' Type Id ';'                   (87)
	TypeDef -> 'typedef' Type ';'                      (88)
	Decl -> 'const' Type ListVar                       (89)
	Decl -> Type ListVar                               (90)
	Var -> Id '=' Exp                                  (91)
	Var -> Id                                          (92)
	ListVar -> Var                                     (93)
	ListVar -> Var ',' ListVar                         (94)
	ListVar ->                                         (95)
	ListVar -> Var ListVar                             (96)
	ListDecl ->                                        (97)
	ListDecl -> Decl                                   (98)
	ListDecl -> Decl ';' ListDecl                      (99)
	ListDecl ->                                        (100)
	ListDecl -> Decl ListDecl                          (101)
	QCon -> QCon '::' Name                             (102)
	QCon -> Name                                       (103)
	Name -> Id                                         (104)
	Name -> TempInst                                   (105)
	Exp16 -> Id                                        (106)
	Exp16 -> Literal                                   (107)
	Exp16 -> '(' Exp ')'                               (108)
	Exp16 -> '(' Exp ')'                               (109)
	Exp15 -> Exp15 '[' Exp ']'                         (110)
	Exp15 -> QCon                                      (111)
	Exp15 -> Exp15 '(' ListExp ')'                     (112)
	Exp15 -> Exp16                                     (113)
	Exp14 -> Exp15 '.' Exp15                           (114)
	Exp14 -> Exp15 '->' Exp15                          (115)
	Exp14 -> Exp15 '++'                                (116)
	Exp14 -> Exp15 '--'                                (117)
	Exp14 -> '*' Exp15                                 (118)
	Exp14 -> Exp15                                     (119)
	Exp13 -> '++' Exp14                                (120)
	Exp13 -> '--' Exp14                                (121)
	Exp13 -> '!' Exp14                                 (122)
	Exp13 -> Exp14                                     (123)
	Exp12 -> Exp12 '*' Exp13                           (124)
	Exp12 -> Exp12 '/' Exp13                           (125)
	Exp12 -> Exp12 '%' Exp13                           (126)
	Exp12 -> Exp13                                     (127)
	Exp11 -> Exp11 '+' Exp12                           (128)
	Exp11 -> Exp11 '-' Exp12                           (129)
	Exp11 -> Exp12                                     (130)
	Exp10 -> Exp10 '<<' Exp11                          (131)
	Exp10 -> Exp10 '>>' Exp11                          (132)
	Exp10 -> Exp11                                     (133)
	Exp9 -> Exp9 '>' Exp10                             (134)
	Exp9 -> Exp9 '<' Exp10                             (135)
	Exp9 -> Exp9 '=>' Exp10                            (136)
	Exp9 -> Exp9 '>=' Exp10                            (137)
	Exp9 -> Exp9 '<=' Exp10                            (138)
	Exp9 -> Exp9 '=<' Exp10                            (139)
	Exp9 -> Exp10                                      (140)
	Exp8 -> Exp8 '==' Exp9                             (141)
	Exp8 -> Exp8 '!=' Exp9                             (142)
	Exp8 -> Exp9                                       (143)
	Exp4 -> Exp4 '&&' Exp5                             (144)
	Exp4 -> Exp5                                       (145)
	Exp3 -> Exp3 '||' Exp4                             (146)
	Exp3 -> Exp4                                       (147)
	Exp2 -> Exp2 '=' Exp3                              (148)
	Exp2 -> Exp2 '+=' Exp3                             (149)
	Exp2 -> Exp2 '-=' Exp3                             (150)
	Exp2 -> Exp2 '?' Exp3 ':' Exp3                     (151)
	Exp2 -> Exp3                                       (152)
	Exp1 -> 'throw' Exp2                               (153)
	Exp1 -> Exp2                                       (154)
	Exp -> Exp1                                        (155)
	Exp5 -> Exp6                                       (156)
	Exp6 -> Exp7                                       (157)
	Exp7 -> Exp8                                       (158)
	ListExp ->                                         (159)
	ListExp -> Exp                                     (160)
	ListExp -> Exp ',' ListExp                         (161)
	ListExp ->                                         (162)
	ListExp -> Exp ListExp                             (163)
	TempInst -> Id '<' TypeList '>'                    (164)
	TypeList -> ListType                               (165)
	ListType ->                                        (166)
	ListType -> Type                                   (167)
	ListType -> Type ',' ListType                      (168)
	ListType ->                                        (169)
	ListType -> Type ListType                          (170)
	Type -> BType '*'                                  (171)
	Type -> BType '&'                                  (172)
	Type -> BType                                      (173)
	BType -> QCon                                      (174)
	BType -> 'int'                                     (175)
	BType -> 'void'                                    (176)
	BType -> 'bool'                                    (177)
	BType -> 'double'                                  (178)
	Literal -> StringList                              (179)
	Literal -> Integer                                 (180)
	Literal -> Double                                  (181)
	Literal -> Char                                    (182)
	StringList -> StringList String                    (183)
	StringList -> String                               (184)
	Id -> Ident                                        (185)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=<'           { PT _ (TS _ 26) }
	'=='           { PT _ (TS _ 27) }
	'=>'           { PT _ (TS _ 28) }
	'>'            { PT _ (TS _ 29) }
	'>='           { PT _ (TS _ 30) }
	'>>'           { PT _ (TS _ 31) }
	'?'            { PT _ (TS _ 32) }
	'['            { PT _ (TS _ 33) }
	']'            { PT _ (TS _ 34) }
	'bool'         { PT _ (TS _ 35) }
	'const'        { PT _ (TS _ 36) }
	'do'           { PT _ (TS _ 37) }
	'double'       { PT _ (TS _ 38) }
	'else'         { PT _ (TS _ 39) }
	'exit'         { PT _ (TS _ 40) }
	'for'          { PT _ (TS _ 41) }
	'if'           { PT _ (TS _ 42) }
	'inline'       { PT _ (TS _ 43) }
	'int'          { PT _ (TS _ 44) }
	'namespace'    { PT _ (TS _ 45) }
	'return'       { PT _ (TS _ 46) }
	'struct'       { PT _ (TS _ 47) }
	'throw'        { PT _ (TS _ 48) }
	'typedef'      { PT _ (TS _ 49) }
	'using'        { PT _ (TS _ 50) }
	'void'         { PT _ (TS _ 51) }
	'while'        { PT _ (TS _ 52) }
	'{'            { PT _ (TS _ 53) }
	'||'           { PT _ (TS _ 54) }
	'}'            { PT _ (TS _ 55) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }
	L_ident        { PT _ (TV $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDefinition rule  1
	%start_pListDefinition rule  2
	%start_pArgumentList rule  3
	%start_pListArgument rule  4
	%start_pArgument rule  5
	%start_pBody    rule  6
	%start_pStm     rule  7
	%start_pListStm rule  8
	%start_pStruct  rule  9
	%start_pTypeDef rule  10
	%start_pDecl    rule  11
	%start_pVar     rule  12
	%start_pListVar rule  13
	%start_pListDecl rule  14
	%start_pQCon    rule  15
	%start_pName    rule  16
	%start_pExp16   rule  17
	%start_pExp15   rule  18
	%start_pExp14   rule  19
	%start_pExp13   rule  20
	%start_pExp12   rule  21
	%start_pExp11   rule  22
	%start_pExp10   rule  23
	%start_pExp9    rule  24
	%start_pExp8    rule  25
	%start_pExp4    rule  26
	%start_pExp3    rule  27
	%start_pExp2    rule  28
	%start_pExp1    rule  29
	%start_pExp     rule  30
	%start_pExp5    rule  31
	%start_pExp6    rule  32
	%start_pExp7    rule  33
	%start_pListExp rule  34
	%start_pTempInst rule  35
	%start_pTypeList rule  36
	%start_pListType rule  37
	%start_pType    rule  38
	%start_pBType   rule  39
	%start_pLiteral rule  40
	%start_pStringList rule  41
	%start_pId      rule  42
	Integer         rule  43
	Double          rule  44
	Char            rule  45
	String          rule  46
	Ident           rule  47
	Program         rule  48
	Definition      rules 49, 50, 51, 52, 53, 54, 55, 56
	ListDefinition  rules 57, 58
	ArgumentList    rule  59
	ListArgument    rules 60, 61, 62, 63, 64
	Argument        rules 65, 66, 67, 68
	Body            rules 69, 70
	Stm             rules 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83
	ListStm         rules 84, 85
	Struct          rule  86
	TypeDef         rules 87, 88
	Decl            rules 89, 90
	Var             rules 91, 92
	ListVar         rules 93, 94, 95, 96
	ListDecl        rules 97, 98, 99, 100, 101
	QCon            rules 102, 103
	Name            rules 104, 105
	Exp16           rules 106, 107, 108, 109
	Exp15           rules 110, 111, 112, 113
	Exp14           rules 114, 115, 116, 117, 118, 119
	Exp13           rules 120, 121, 122, 123
	Exp12           rules 124, 125, 126, 127
	Exp11           rules 128, 129, 130
	Exp10           rules 131, 132, 133
	Exp9            rules 134, 135, 136, 137, 138, 139, 140
	Exp8            rules 141, 142, 143
	Exp4            rules 144, 145
	Exp3            rules 146, 147
	Exp2            rules 148, 149, 150, 151, 152
	Exp1            rules 153, 154
	Exp             rule  155
	Exp5            rule  156
	Exp6            rule  157
	Exp7            rule  158
	ListExp         rules 159, 160, 161, 162, 163
	TempInst        rule  164
	TypeList        rule  165
	ListType        rules 166, 167, 168, 169, 170
	Type            rules 171, 172, 173
	BType           rules 174, 175, 176, 177, 178
	Literal         rules 179, 180, 181, 182
	StringList      rules 183, 184
	Id              rule  185

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 57
	'const'        reduce using rule 57
	'double'       reduce using rule 57
	'inline'       reduce using rule 57
	'int'          reduce using rule 57
	'struct'       reduce using rule 57
	'typedef'      reduce using rule 57
	'using'        reduce using rule 57
	'void'         reduce using rule 57
	L_ident        reduce using rule 57
	%eof           reduce using rule 57

	Program        goto state 166
	ListDefinition goto state 167

State 1


	'bool'         shift, and enter state 63
	'const'        shift, and enter state 125
	'double'       shift, and enter state 64
	'inline'       shift, and enter state 164
	'int'          shift, and enter state 65
	'struct'       shift, and enter state 134
	'typedef'      shift, and enter state 132
	'using'        shift, and enter state 165
	'void'         shift, and enter state 66
	L_ident        shift, and enter state 47

	Ident          goto state 45
	Definition     goto state 159
	Struct         goto state 160
	TypeDef        goto state 161
	Decl           goto state 162
	QCon           goto state 58
	Name           goto state 59
	TempInst       goto state 60
	Type           goto state 163
	BType          goto state 68
	Id             goto state 62

State 2


	'bool'         reduce using rule 57
	'const'        reduce using rule 57
	'double'       reduce using rule 57
	'inline'       reduce using rule 57
	'int'          reduce using rule 57
	'struct'       reduce using rule 57
	'typedef'      reduce using rule 57
	'using'        reduce using rule 57
	'void'         reduce using rule 57
	L_ident        reduce using rule 57
	%eof           reduce using rule 57

	ListDefinition goto state 158

State 3


	'('            shift, and enter state 157

	ArgumentList   goto state 156

State 4


	'bool'         shift, and enter state 63
	'const'        shift, and enter state 153
	'double'       shift, and enter state 64
	'int'          shift, and enter state 65
	'void'         shift, and enter state 66
	L_ident        shift, and enter state 47
	%eof           reduce using rule 63
			(reduce using rule 60)


	Ident          goto state 45
	ListArgument   goto state 154
	Argument       goto state 155
	QCon           goto state 58
	Name           goto state 59
	TempInst       goto state 60
	Type           goto state 152
	BType          goto state 68
	Id             goto state 62

State 5


	'bool'         shift, and enter state 63
	'const'        shift, and enter state 153
	'double'       shift, and enter state 64
	'int'          shift, and enter state 65
	'void'         shift, and enter state 66
	L_ident        shift, and enter state 47

	Ident          goto state 45
	Argument       goto state 151
	QCon           goto state 58
	Name           goto state 59
	TempInst       goto state 60
	Type           goto state 152
	BType          goto state 68
	Id             goto state 62

State 6


	'{'            shift, and enter state 150

	Body           goto state 149

State 7


	'!'            shift, and enter state 96
	'('            shift, and enter state 97
	'*'            shift, and enter state 98
	'++'           shift, and enter state 99
	'--'           shift, and enter state 100
	'bool'         shift, and enter state 63
	'const'        shift, and enter state 125
	'do'           shift, and enter state 142
	'double'       shift, and enter state 64
	'exit'         shift, and enter state 143
	'for'          shift, and enter state 144
	'if'           shift, and enter state 145
	'int'          shift, and enter state 65
	'return'       shift, and enter state 146
	'struct'       shift, and enter state 134
	'throw'        shift, and enter state 101
	'typedef'      shift, and enter state 132
	'void'         shift, and enter state 66
	'while'        shift, and enter state 147
	'{'            shift, and enter state 148
	L_integ        shift, and enter state 44
	L_doubl        shift, and enter state 56
	L_charac       shift, and enter state 57
	L_quoted       shift, and enter state 50
	L_ident        shift, and enter state 47
